2002-05-04  Roland McGrath  <roland@frob.com>

	* fakeauth.c (main): Update doc strings, clean up argp_parse call.

	* fakeroot.sh: New file.
	* Makefile (targets, special-targets, SRCS): Add it.

	* settrans.c (options): Add --chroot/-C option.
	(main_opt): Parse that option, take following args until "--"
	as a command to exec chroot'd to the translated node.

2002-05-03  Roland McGrath  <roland@frob.com>

	* msgport.c (str2flags): Add break after default: label.

	* vmstat.c (print_val): Use %lld printf format for val_t.

	* fakeauth.c: New file.
	* Makefile (fakeauth): New target.
	(targets): Add it.
	(SRCS): Add fakeauth.c.
	(auth-MIGSFLAGS, fakeauth-CPPFLAGS, authServer-CPPFLAGS,
	auth_requestUser-CPPFLAGS): New variables.

	* shd.c: Include <error.h> for `error' decl.

	* Makefile (rpctrace): Put libthreads before libports.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* rpctrace.c (parse_msgid_list): Use ERR, not errno.
	* shd.c (reap): Use error, not perror.
	(command): Likewise.
	(main): Likewise.
	(run): Use error, not perror.  Use ERR, not errno.

2002-01-30  Roland McGrath  <roland@frob.com>

	* rpctrace.c (struct msgid_info): New type.
	(msgid_ihash_cleanup): Updated to use it.
	(parse_msgid_list): Use it to also record subsystem name in table.
	(msgid_info): New function, guts of msgid_name.
	(msgid_name): Use that.
	(msgid_display, msgid_trace_replies): New stub functions.
	(trace_and_forward): Use them to conditionalize tracing and printing.

2002-01-29  Roland McGrath  <roland@frob.com>

	* rpctrace.c (options): Add -I/--rpc-list.
	(msgid_ihash): New static variable.
	(msgid_ihash_cleanup): New function.
	(parse_msgid_list, magid_name): New functions.
	(main: parse_opt): Grok -I using parse_msgid_list.
	(trace_and_forward, print_request_header, print_reply_header):
	Look up msgh_id values using msgid_name and print strings if possible.

2002-01-04  Roland McGrath  <roland@frob.com>
