@@ -1,3 +1,9 @@
+2002-05-05  Marcus Brinkmann  <marcus@gnu.org>
+
+	* fakeauth.c (main): Add ARGP_IN_ORDER to argp_parse invocation.
+	(main: parse_opt): New function.
+	(main): Set parser in ARGP to parse_opt.
+	
 2002-05-04  Roland McGrath  <roland@frob.com>
 
 	* fakeauth.c (main): Update doc strings, clean up argp_parse call.
